--- a/wix.config.json
+++ b/wix.config.json
@@ -1,4 +1,7 @@
 {
   "siteId": "bd843f3e-7eeb-44d6-8cc1-7af8b2845f45",
-  "uiVersion": "17"
+  "uiVersion": "17",
+  "cssFiles": [
+    "src/public/styles.css"
+  ]
 }
